--- a/twitterSearchApi/package.json
+++ b/twitterSearchApi/package.json
@@ -30,8 +30,10 @@
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "body-parser": "^1.15.1",
+    "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.4",
+    "oauth": "^0.9.14",
     "twitter": "^1.3.0"
   }
 }
